<resources>
    <string name="app_name">Nasa Fetcher</string>
    <string name="near_earth_objects">Near Earth Objects</string>
    <string name="start_date">START DATE</string>
    <string name="search">SEARCH</string>
    <string name="end_date">END DATE</string>
    <string name="astronomy_pic_of_the_day">ASTRONOMY PIC OF THE DAY</string>
    <string name="latest_space_news">Latest Space News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="position_of_a_satellite_tle">Position of a satellite(TLE)</string>
    <string name="satellite_search">Satellite Search</string>
    <string name="search_your_satellite">Search your satellite</string>
</resources>